plugins {
    id 'java'
    id 'eclipse'
    id 'jacoco'
    id 'application'
}

group 'aPaintUS'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.9

repositories {
    mavenCentral()
}

dependencies {
    compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.2.11'
    compile group: 'javax.activation', name: 'activation', version: '1.1.1'
    compile group: 'com.sun.xml.bind', name: 'jaxb-impl', version: '2.2.11'
    compile group: 'com.sun.xml.bind', name: 'jaxb-core', version: '2.2.11'

    testCompile ("org.testfx:openjfx-monocle:jdk-9+181")
    testCompile('org.junit.jupiter:junit-jupiter-api:5.3.2')
    testCompile('org.junit.jupiter:junit-jupiter-params:5.3.2')
    testRuntime('org.junit.jupiter:junit-jupiter-engine:5.3.2')

    testImplementation(
            'org.junit.jupiter:junit-jupiter-api:5.1.0'
    )
    testRuntimeOnly(
            'org.junit.jupiter:junit-jupiter-engine:5.1.0',
            'org.junit.vintage:junit-vintage-engine:5.1.0'
    )

    testCompile(group: "org.hamcrest", name: "hamcrest-all", version: "1.3")
    testCompile(group: "org.testfx", name: "testfx-core", version: "4.0.13-alpha")
    testCompile(group: "org.testfx", name: "testfx-junit", version: "4.0.13-alpha")
}

application {
    mainClassName = 'apaintus.Main'
}

compileJava {
    doFirst {
        options.compilerArgs = [
                '--module-path', classpath.asPath,
                '--add-modules', 'javafx.controls,javafx.base,javafx.fxml,javafx.graphics,javafx.swing,java.xml.bind'
        ]
        classpath = files()
    }
}

test {
    jvmArgs "-Dheadless=${project.hasProperty('headless') ? project.headless : true}"
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
    jacoco {
        append = false
        destinationFile = file("$buildDir/reports/jacoco-it.exec")
    }
}
